COH-25111: Implement custom config handler for Caffeine (main -> ce/main @ 92797)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 92816]